infrastructure/apps/monitoring/headlamp/headlamp-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp-svc
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: headlamp
  ports:
  - port: 80
    targetPort: 4466
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: headlamp.lab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: headlamp
            port:
              number: 80
